# core-packages

./: README.md
alci-calamares-config/: PKGBUILD  calamares-config-axos-3.2-3-x86_64.pkg.tar.zst
axinstall/: PKGBUILD  axinstall-0.1.0-3-x86_64.pkg.tar.zst  axinstall-0.2.0-3-x86_64.pkg.tar.zst  axinstall-0.2.1-1-x86_64.pkg.tar.zst  axinstall-0.2.2-1-x86_64.pkg.tar.zst  axinstall-0.2.3-1-x86_64.pkg.tar.zst
axinstall-cli/: PKGBUILD  axinstall-cli-0.1.0-1-x86_64.pkg.tar.zst  axinstall-cli-0.1.10-1-x86_64.pkg.tar.zst  axinstall-cli-0.1.11-1-x86_64.pkg.tar.zst  axinstall-cli-0.1.12-1-x86_64.pkg.tar.zst  axinstall-cli-0.1.13-1-x86_64.pkg.tar.zst  axinstall-cli-0.1.13-2-x86_64.pkg.tar.zst  axinstall-cli-0.1.2-1-x86_64.pkg.tar.zst  axinstall-cli-0.1.3-1-x86_64.pkg.tar.zst  axinstall-cli-0.1.4-1-x86_64.pkg.tar.zst  axinstall-cli-0.1.5-1-x86_64.pkg.tar.zst  axinstall-cli-0.1.5-2-x86_64.pkg.tar.zst  axinstall-cli-0.1.7-1-x86_64.pkg.tar.zst  axinstall-cli-0.1.8-1-x86_64.pkg.tar.zst  axinstall-cli-0.1.9-1-x86_64.pkg.tar.zst  axinstall-cli-debug-0.1.0-1-x86_64.pkg.tar.zst  axinstall-cli-debug-0.1.10-1-x86_64.pkg.tar.zst  axinstall-cli-debug-0.1.11-1-x86_64.pkg.tar.zst  axinstall-cli-debug-0.1.12-1-x86_64.pkg.tar.zst  axinstall-cli-debug-0.1.13-1-x86_64.pkg.tar.zst  axinstall-cli-debug-0.1.13-2-x86_64.pkg.tar.zst  axinstall-cli-debug-0.1.2-1-x86_64.pkg.tar.zst  axinstall-cli-debug-0.1.3-1-x86_64.pkg.tar.zst  axinstall-cli-debug-0.1.4-1-x86_64.pkg.tar.zst  axinstall-cli-debug-0.1.5-1-x86_64.pkg.tar.zst  axinstall-cli-debug-0.1.5-2-x86_64.pkg.tar.zst  axinstall-cli-debug-0.1.7-1-x86_64.pkg.tar.zst  axinstall-cli-debug-0.1.8-1-x86_64.pkg.tar.zst  axinstall-cli-debug-0.1.9-1-x86_64.pkg.tar.zst
axinstall/src/axinstall/classes/: axinstall_screen.py  install_prefs.py  meson.build  partition.py
axinstall/src/axinstall/locales/: africa.py  america.py  antarctica.py  arctic.py  asia.py  atlantic.py  australia.py  brazil.py  canada.py  chile.py  europe.py  indian.py  locales_list.py  meson.build  mexico.py  pacific.py
axinstall/src/axinstall/utils/: disks.py  meson.build
axinstall/src/axinstall/widgets/: desktop.py  disk.py  layout.py  locale.py  meson.build  partition.py  selected_locale.py  timezone.py  variant.py
axinstall/src/src/: about.ui  axinstall.gresource.xml  axinstall.in  desktops.py  keymaps.py  main.py  meson.build  window.py  window.ui
axinstall/src/src/classes/: install_prefs.py  meson.build  partition.py
axinstall/src/src/functions/: desktop_screen.py  finished_screen.py  install_screen.py  keyboard_screen.py  language_screen.py  meson.build  misc_screen.py  partition_screen.py  summary_screen.py  timezone_screen.py  user_screen.py
axinstall/src/src/locales/: africa.py  america.py  antarctica.py  arctic.py  asia.py  atlantic.py  australia.py  brazil.py  canada.py  chile.py  europe.py  indian.py  locales_list.py  mexico.py  pacific.py
axinstall/src/src/pages/: finished_screen.ui  install_screen.ui  partition_screen.ui  user_screen.ui
axinstall/src/src/scripts/: checkEFI.sh  getDiskSize.sh  install.sh  meson.build  savePrefs.sh
axinstall/src/src/utils/: disks.py  meson.build
axinstall/src/src/widgets/: desktop.py  disk.py  layout.py  meson.build  partition.py  timezone.py  variant.py
axos-calamares-config/: PKGBUILD  calamares-config-axos-3.3-1-x86_64.pkg.tar.zst  calamares-config-axos-3.4-1-x86_64.pkg.tar.zst  calamares-config-axos-3.5-1-x86_64.pkg.tar.zst
axos-core/: PKGBUILD
axos-hooks/: .gitignore  PKGBUILD  axos-full-update  axos-hooks-3.0-1-x86_64.pkg.tar.zst  axos-hooks-3.4-2-x86_64.pkg.tar.zst  axos-hooks-3.5-1-x86_64.pkg.tar.zst  axos-hooks-3.5-2-x86_64.pkg.tar.zst  axos-hooks-3.6-1-x86_64.pkg.tar.zst  axos-hooks-runner  axos-hooks.hook  axos-lsb-release.hook  axos-os-release.hook  axos-plymouth.hook  axos-reboot-required  axos-reboot-required.hook  axos-reload-theme
axos-hooks-extra/: PKGBUILD  axos-hook-grub.hook  axos-hooks-extra  axos-hooks-extra-3.0-1-x86_64.pkg.tar.zst  axos-hooks-extra-3.2-1-x86_64.pkg.tar.zst
axskel/: PKGBUILD  axskel-1.6.1-1-x86_64.pkg.tar.zst  axskel-1.6.2-1-x86_64.pkg.tar.zst  (+5 more)
axskel-awesome/: .gitignore  PKGBUILD  axskel-3.3-1-x86_64.pkg.tar.zst  axskel-debug-3.3-1-x86_64.pkg.tar.zst  axskel-debug-4.0-1-x86_64.pkg.tar.zst  axskel-debug-4.1-1-x86_64.pkg.tar.zst
axskel-hypr/: PKGBUILD
axskel-plasma/: PKGBUILD
grub/: PKGBUILD  (+3 more)
(+602 files in other folders)
